# semantic-code-edit-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tdd_progress_summary.md  tech_stack.md
queries/javascript/: validation.scm
queries/json/: validation.scm
queries/python/: validation.scm
queries/typescript/: validation.scm
src/: editor.rs  error.rs  filesystem.rs  lib.rs  main.rs  selector.rs  state.rs  tools.rs
src/editor/: diff_generator.rs  edit.rs  edit_iterator.rs  edit_position.rs  formatter.rs  validator.rs
src/languages/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  json.rs  mod.rs  php.rs  plain.rs  python.rs  ruby.rs  rust.rs  toml.rs  traits.rs  tsx.rs  typescript.rs  utils.rs
src/tools/: commit_staged.rs  helpers.rs  open_files.rs  retarget_staged.rs  set_context.rs  stage_operation.rs
src/validation/: context_validator.rs  mod.rs
tests/: edit_iterator_consolidation_tests.rs  editor_behavior_capture.rs  editor_decomposition_tdd.rs  error_handling_integration.rs  error_hierarchy.rs  error_message_consistency.rs  filesystem_error_handling_tdd.rs  filesystem_standardization_tdd.rs  integration_test.rs  language_builder_tests.rs  line_converter_tests.rs  mod.rs  semantic_validation.rs  session_management_improvements.rs  snapshot_runner.rs  utf8_boundary_validation.rs  validation_query_expansion_tests.rs
