[package]
name = "semantic-code-edit-mcp"
version = "0.1.0"
authors = ["cognitive-glitch <intuitionwith@gmail.com>", "Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
description = "MCP server for semantic code editing with tree-sitter"
readme = "README.md"
repository = "https://github.com/cognitive-glitch/semantic-code-edit-mcp"
license = "Apache-2.0"
keywords = ["mcp", "tree-sitter", "semantic-editing", "code-editing"]
categories = ["development-tools", "text-processing"]

[profile.release]
lto = true
opt-level = 3
strip = true
debug = false
overflow-checks = false
rpath = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1
strip = true
debug = false

[profile.dev]
incremental = false

[dependencies]
# MCP server basics
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# Schema generation and new MCP pattern
schemars = "1.0"
dirs = "6.0"
shellexpand = "3.1.1"
env_logger = "0.11.8"
log = "0.4.27"

# Tree-sitter for AST parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"

# File system operations
walkdir = "2.5"

# Text processing
ropey = "1.6"  # Efficient text editing with proper UTF-8 handling
tree-sitter-json = "0.24.8"
diffy = "0.4.2"
fieldwork = "0.4"
jsonformat = "2.1.0"
fastrand = "2.3.0"
lru = "0.16"
prettify-markdown = "0.2.0"
prettify = "0.3.0"
tree-sitter-toml-ng = "0.7.0"
taplo = "0.14.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-python = "0.23.6"
tree-sitter-query = "0.1.0"
rustpython-parser = "0.4.0"
bk-tree = "0.5.0"
tree-sitter-plain = "0.1.0"
tree-sitter-go = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-java = "0.23"
tree-sitter-php = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
mcplease = "0.1.0"

[dev-dependencies]
tempfile = "3.0"